--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/v4-shims.css">
   {% if site.favicon %}
-  <link rel="shortcut icon" href="{{ site.favicon }}" type="image/x-icon">{% endif %}
-  {% if site.touch_icon %}
   <link rel="apple-touch-icon" href="{{ site.touch_icon }}">{% endif %}
+
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+
 </head>
 
 <body>
@@ -76,10 +82,12 @@
 
 <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
 <script>
-  window.formbutton=window.formbutton||function(){(formbutton.q=formbutton.q||[]).push(arguments)};
+  window.formbutton = window.formbutton || function() {
+    (formbutton.q = formbutton.q || []).push(arguments)
+  };
   formbutton("create", {
     action: "https://formspree.io/YOUR_FORM_ID",
-    buttonImg: "<i class='fas fa-envelope' style='font-size:24px'/>"  // <-- new button icon
+    buttonImg: "<i class='fas fa-envelope' style='font-size:24px'/>" // <-- new button icon
   });
 </script>
 
