--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <meta name="keywords" content="{{ site.keywords }}">
   <meta name="description" content="{{ site.description }}">
   <link rel="stylesheet" href="combo.css">
-  <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/v4-shims.css">
 
@@ -52,7 +53,6 @@
           <i class="fa fa-circle fa-stack-2x"></i>
           <i class="fa fa-{{ page.fa-icon }} fa-stack-1x"></i>
         </span>
-        <!-- <h5 class="icon-title">{{ page.title }}</h5> -->
       </div>
       {% endif %}
       <div class="container {{ page.style }}">
@@ -73,16 +73,18 @@
 </body>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="site.js"></script>
- 
+
 <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
 <script>
-	window.formbutton = window.formbutton || function() {
-	(formbutton.q = formbutton.q || []).push(arguments)
-	};
-	formbutton("create", {
-	buttonImg: "<i class='fas fa-envelope' style='font-size:24px'/>",
-	action: "https://formspree.io/moqkogpr"
-	});
+  window.formbutton = window.formbutton || function() {
+    (formbutton.q = formbutton.q || []).push(arguments)
+  };
+  formbutton("create", {
+    action: "https://formspree.io/moqkogpr",
+    buttonImg: "<i class='fas fa-envelope' style='font-size:24px'/>",
+    title: "Let's talk!",
+    description: "How can I help you with your project?"
+  });
 </script>
 
 
