--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
 
 </body>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="site.js"></script>
 
 <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
